# color-thief-rs

./: Cargo.toml  README.md
benches/: find_palette.rs
images/: README.md
src/: lib.rs
tests/: test.rs
